# sui-literals

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md
scripts/: check-all-features.sh  clippy-all-features.sh  init-workspace.sh  package-all-features.sh  run-check-clip-test-all-features.sh  tests-all-features.sh
src/: error.rs  hex.rs  lib.rs
tests/: tests.rs
