[package]
name = "sui-literals"
version = "0.1.0"
edition = "2021"
authors = ["Jim Chng <jimchng@outlook.com>"]
description = "A proc-macro for Sui literals"
license = "MIT"
repository = "https://github.com/jymchng/sui-literals"
documentation = "https://docs.rs/sui-literals"
homepage = "https://github.com/jymchng/sui-literals"
keywords = ["sui", "literals", "proc-macro"]
categories = ["development-tools", "macros"]
readme = "README.md"
exclude = ["target", "tests/tmp"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
serde = { version = "^1.0.159", features = ["derive"] }
thiserror = "^1.0.62"
hex = "^0.4.3"
debug_print = "^1.0.0"

[dev-dependencies]
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "main" }
